[package]
authors = ["Carsten König <carstenkoenig92@gmail.com>"]
edition = "2018"
name = "simprox"
version = "0.4.0"
[dependencies]
chrono = "0.4"
ctrlc = "3.2"
fern = "0.6"
log = "0.4"
hyper-tls = "0.5"
warp = "0.3"

[dependencies.clap]
features = ["cargo", "env"]
version = "4"

[dependencies.tokio]
features = ["full"]
version = "1"

[profile.release]
lto = true
